# demo-extention-lsp

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_HIGHLIGHTING.md  README.md  cir.tmLanguage.json  package-lock.json  package.json  tsconfig.json
ext-backend/lsp-server/: Cargo.toml
ext-backend/lsp-server/src/: main.rs  server.rs  state.rs
ext-backend/lsp-server/src/handler/: completion.rs  diagnostics.rs
ext-backend/lsp-server/src/symbol_info/: mod.rs  symbol.rs  table.rs
ext-backend/spice_craft/: .coding-ci.yml  .gitignore  README.md  book.toml
ext-backend/spice_craft/.cargo/: config.toml
ext-backend/spice_craft/crates/binary/: Cargo.toml
ext-backend/spice_craft/crates/binary/src/: pspice.rs
ext-backend/spice_craft/crates/clib/: Cargo.toml
ext-backend/spice_craft/crates/core/: Cargo.toml
ext-backend/spice_craft/crates/core/src/: grammar.rs  lexer.rs  lib.rs  parse.rs  value.rs
ext-backend/spice_craft/crates/core/src/ast/: command.rs  component.rs  expression.rs  gain.rs  mod.rs  sweep.rs  transient.rs  variable.rs
ext-backend/spice_craft/crates/spice-shim/: Cargo.toml  build.rs
ext-backend/spice_craft/crates/spice_proc-macro/: Cargo.toml
ext-backend/spice_craft/docs/: SUMMARY.md  authors.md
ext-backend/spice_craft/models/: jfet_test.cir  recursive_subckt.cir
ext-backend/spice_craft/models/Amptests/: AmpTests.cir
ext-backend/spice_craft/models/Collector/: Collector.lib
lsp-server-demo/: Cargo.toml
lsp-server-demo/src/: handler.rs  main.rs
src/: extension.ts
syntaxes/: cir.tmLanguage.json
themes/: spice-dark-theme.json
(+10 files in other folders)
