[package]
name = "spice-parser_core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.90"
nom = "7.1.3"
thiserror = "1.0.64"
spice_proc-macro = { path = "../spice_proc-macro" }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
codespan = "0.11.1"
codespan-reporting = "0.11.1"

[lib]
target = ["rlib", "dylib"]